bigger covers and author name bug

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -256,7 +256,7 @@
 
     .section {
         opacity: 0.9;
-        margin: 2rem $margin 0;
+        margin: 1rem $margin 0;
         font-size: 1.1rem;
         font-weight: 500;
     }
@@ -422,6 +422,7 @@
     }
 
     .author {
+        width: 100%;
         max-width: 100%;
         opacity: 0.5;
         margin-bottom: $marginBot;
@@ -556,13 +557,10 @@
                     width: 100%;
                     max-width: 100%;
                     min-width: 100%;
-                    overflow: hidden;
                     opacity: 0.8;
                     font-size: 0.75rem;
                     font-weight: 600;
                     text-align: center;
-                    text-overflow: ellipsis;
-                    white-space: nowrap;
 
                     .anchor {
                         display: none;
